# ctxprompt

./: .gitignore  pyproject.toml
src/ctxprompt/: __init__.py  cli.py  detectors.py  ignore.py  models.py  prompt_builder.py  ranking.py  scanner.py
src/ctxprompt/extractors/: __init__.py  node_extractor.py  python_extractor.py
